# romberg-integration

./: .gitignore  CHANGELOG.md  COMPARISON_REPORT.md  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_SUMMARY.md  RombergIntegration.pyx  publish.sh  pyproject.toml  setup.py  test_romberg.py  test_romberg_compare.py
.github/workflows/: ci.yml
