[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "Cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "RombergIntegration"
version = "1.0.0"
description = "High-performance Cython implementation of Romberg Integration algorithm"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "wangheng", email = "wangfaofao@gmail.com"},
]
keywords = [
    "numerical-integration",
    "romberg",
    "calculus",
    "cython",
    "numerical-methods",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/wangheng/romberg-integration"
Documentation = "https://github.com/wangheng/romberg-integration/blob/main/README.md"
Repository = "https://github.com/wangheng/romberg-integration.git"
Issues = "https://github.com/wangheng/romberg-integration/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
# Cython 扩展由 setup.py 处理
# 只包含 RombergIntegration 模块，不包含测试文件
py-modules = ["RombergIntegration"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
